create orders sort by price and date, do del user endpoint

--- a/client/cl_admin/style.css
+++ b/client/cl_admin/style.css
@@ -166,3 +166,14 @@ textarea {
     resize: vertical;
     min-height: 100px;
 }
+
+/* Добавим в style.css */
+th.sortable {
+    cursor: pointer;
+    position: relative;
+    padding-right: 20px;
+}
+
+th.sortable:hover {
+    background-color: #3498db;
+}
